# Void-LinkAudio

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  LICENSE  README.md  SETUP.md
core/: AudioRingBuffer.h  LinkAudioManager.cpp  LinkAudioManager.h  LinkAudioPlatform.h
max/: CMakeLists.txt  README.md
max/package/: README.md  package-info.json
max/package/docs/: void.linkaudio.receive~.maxref.xml  void.linkaudio.send~.maxref.xml
max/package/docs/topics/: void.linkaudio_topic.maxvig.xml
max/package/extras/: VOID_LinkAudio.maxpat
max/package/help/: void.linkaudio.receive~.maxhelp  void.linkaudio.send~.maxhelp
max/source/objects/void.linkaudio.receive~/: CMakeLists.txt  void.linkaudio.receive~.cpp
max/source/objects/void.linkaudio.send~/: CMakeLists.txt  void.linkaudio.send~.cpp
pd/: Makefile  README.md  build.sh
pd/help/: void.linkaudio.receive~-help.pd  void.linkaudio.send~-help.pd
pd/src/: void.linkaudio.receive~.cpp  void.linkaudio.send~.cpp
td/: README.md
td/CHOP/LinkAudioReceive/: LinkAudioReceive.cpp  LinkAudioReceive.h  Parameters.cpp  Parameters.h  Plugins alias  README.md
td/CHOP/LinkAudioSend/: CMakeLists.txt  LinkAudioSend.cpp  LinkAudioSend.h  Parameters.cpp  Parameters.h
tools/: sync-from-rd.sh
vcv/: .gitignore  Makefile  README.md  plugin.json
vcv/src/: VoidLinkAudioReceive.cpp  VoidLinkAudioSend.cpp  plugin.cpp  plugin.hpp
